Agentforce/force-app/main/default/objects/Contract_Line_Item__c/Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <description>AD-736 to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000000}</displayFormat>
        <label>CLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>