Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Active_at_Contract_Termination__c.field-meta.xml
<CustomField>
    <fullName>Active_at_Contract_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if the Line Item was active at the point of Contract Termination. This includes it in DLRS rollup for Annual Revenue.</description>
    <label>Active at Contract Termination</label>
    <type>Checkbox</type>
</CustomField>