Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>AD-736 to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Line Item</relationshipLabel>
    <relationshipName>Contract_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>