Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Contract_Line_Item_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_CaseSafeID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <label>Contract Line Item CaseSafeID</label>
    <type>Text</type>
</CustomField>