Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Contract_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Contract_Owner_Business_Unit__c</fullName>
    <formula>TEXT( Contract__r.Owner:User.Business_Unit__c )</formula>
    <label>Contract Owner Business Unit</label>
    <type>Text</type>
</CustomField>