Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Data Consolidation - field to capture the External ID value</description>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>