Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/GM_Percentage__c.field-meta.xml
<CustomField>
    <fullName>GM_Percentage__c</fullName>
    <label>GM%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>