Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Legacy_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID__c</fullName>
    <label>Legacy OCS ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>