Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Line_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Termination_Date__c</fullName>
    <description>AD-736 to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>Line Termination Date</label>
    <type>Date</type>
</CustomField>