Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>AD-737 https://dev.azure.com/OCS-SalesforceGreenField/Salesforce%20Greenfield/_workitems/edit/737</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>