Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Marked_for_Termination_by_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Termination_by_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by Opportunity After Create and Update flow where the Line Item has been marked for termination because of a Renewal (Rebid/Extension). Used for reporting.</description>
    <label>Marked for Termination by Renewal</label>
    <type>Checkbox</type>
</CustomField>