Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Other_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Termination_Reason__c</fullName>
    <label>Other Termination Reason</label>
    <type>TextArea</type>
</CustomField>