Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Owner_Country__c.field-meta.xml
<CustomField>
    <fullName>Owner_Country__c</fullName>
    <formula>Contract__r.Owner:User.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Country</label>
    <type>Text</type>
</CustomField>