Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>text(Contract__r.Owner:User.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>