Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>AD-737 to update a contract record when an Opportunity Stage is updated to &apos;Closed Won&apos; based on Services containing a type of &apos;Contractual&apos;.</description>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>