Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-736 to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contract Line Item Account does not match Site Account</errorMessage>
        <filterItems>
            <field>Site__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Contract Line Item</relationshipLabel>
    <relationshipName>Contract_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>