Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Subcontracted_Services__c.field-meta.xml
<CustomField>
    <fullName>Subcontracted_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AD-787 The ability to record where Services have been subcontracted.</description>
    <label>Subcontracted Services</label>
    <type>Checkbox</type>
</CustomField>