Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <description>AD-402 the ability to terminate a Contract the ability to terminate a Contract</description>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>Commitments</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Moved In-House</fullName>
            </value>
            <value>
                <fullName>Move to Global Deal</fullName>
            </value>
            <value>
                <fullName>Not in Strategy</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Resource</fullName>
            </value>
            <value>
                <fullName>Risk - Financial</fullName>
            </value>
            <value>
                <fullName>Risk - Reputation</fullName>
            </value>
            <value>
                <fullName>Self Delivery</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Solution</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Terms &amp; Conditions</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Timeline - Long</fullName>
            </value>
            <value>
                <fullName>Timeline - Short</fullName>
            </value>
            <value>
                <fullName>Trade Unions</fullName>
            </value>
            <value>
                <fullName>Contract Terminated</fullName>
                <isActive>false</isActive>
                <label>Contract Terminated</label>
            </value>
            <value>
                <fullName>Customer Closed</fullName>
                <isActive>false</isActive>
                <label>Customer Closed</label>
            </value>
            <value>
                <fullName>Financial Risk</fullName>
                <isActive>false</isActive>
                <label>Financial Risk</label>
            </value>
            <value>
                <fullName>Lost To Competitor</fullName>
                <isActive>false</isActive>
                <label>Lost To Competitor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>