Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/Variable_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Variable_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick where Revenue for this Contract Line is not-fixed and may vary over time</inlineHelpText>
    <label>Variable Revenue</label>
    <type>Checkbox</type>
</CustomField>