Agentforce/force-app/main/default/objects/Contract_Line_Item__c/fields/WBS_Element__c.field-meta.xml
<CustomField>
    <fullName>WBS_Element__c</fullName>
    <description>AD-to create a Contract for &apos;Contractual&apos; Opportunity Product Lines when an Opportunity Stage is &apos;Closed Won&apos; and the Sub-Stage is updated to either &apos;Written Confirmation&apos; or &apos;T&amp;Cs Signed&apos;</description>
    <label>WBS Element</label>
    <length>122</length>
    <type>Text</type>
</CustomField>